2007-12-17  Stef Walter  <stef@memberwebs.com>

    * configure.in: Bump version number

=== seahorse 2.21.4 ===

2007-12-17  Stef Walter  <stef@memberwebs.com>

    * README:
    * NEWS: Release version 2.21.4

2007-12-17  Stef Walter  <stef@memberwebs.com>

    * libseahorse/seahorse-prefs.glade: Reverse last terminology
    change, and use the word 'keyring' for consistency.

2007-12-14  Adam Schreiber  <sadam@clemson.edu>
    
    * plugins/nautilus/seahorse-pgp-preferences.desktop.in:
    * src/seahorse.desktop.in.in: Use name field correctly.
    Patch from JP Rosevear.  Fixes bug #503648

2007-12-09  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-prefs.glade: Better terminology for 
	preferences dialog.
	
2007-12-09  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-gkeyring-item.c:
	* src/seahorse-gkeyring-item.h:
	* src/seahorse-gkeyring-item-properties.c:
	* src/seahorse-gkeyring-item-properties.glade:
	* src/seahorse-gkeyring-operation.c:
	* src/seahorse-gkeyring-operation.h:
	* src/seahorse-gkeyring-source.c: Add support for modifying gnome-keyring
	application ACLs.
	
2007-12-08  Stef Walter  <stef@memberwebs.com>

    * libseahorse/Makefile.am
    * libseahorse/seahorse-add-keyring.glade: (added)
    * libseahorse/seahorse-prefs-keyrings.c: (added)
    * libseahorse/seahorse-prefs.c: 
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-widget.c:
    * libseahorse/seahorse-widget.h:
    * src/seahorse-gkeyring-source.c: Add gnome-keyring-manager functionality
    to seahorse.
    
2007-12-08  Stef Walter  <stef@memberwebs.com>

    * configure.in:
    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-operation.h: Remove usage of ssh-add and 
    related operations which are no longer needed.
	
2007-12-06  Adam Schreiber  <sadam@clemson.edu>
    
    * plugins/nautilus/seahorse-tool.c: Switched import to use DBus interface.
    Fixes bug #416458

2007-12-02  Adam Schreiber  <sadam@clemson.edu>
    