@@ -1,3 +1,10 @@
+2008-01-01  Adam Schreiber  <sadam@clemson.edu>
+    
+    * src/seahorse-key-manager-store.c:
+    * src/seahorse-key-manager-store.h:
+    * src/seahorse-key-manager.c: Support all text targets that gtk supports.
+    Patch from Christian Persch.  Fixes bug #504941
+
 2007-12-17  Stef Walter  <stef@memberwebs.com>
 
     * configure.in: Bump version number
